Fix for problem reported y Tillmann Runkel, see post "Soot crashes at Jimple bodycreation"
Fix was to flush caches at the right time when generating code for try/finally statements