@@ -1,125 +1,169 @@
-
 package soot.JastAddJ;
-import java.util.HashSet;import java.util.LinkedHashSet;import java.io.File;import java.util.*;import beaver.*;import java.util.ArrayList;import java.util.zip.*;import java.io.*;import java.io.FileNotFoundException;import java.util.Collection;import soot.*;import soot.util.*;import soot.jimple.*;import soot.coffi.ClassFile;import soot.coffi.method_info;import soot.coffi.CONSTANT_Utf8_info;import soot.tagkit.SourceFileTag;import soot.coffi.CoffiMethodSource;
 
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.io.File;
+import java.util.*;
+import beaver.*;
+import java.util.ArrayList;
+import java.util.zip.*;
+import java.io.*;
+import java.io.FileNotFoundException;
+import java.util.Collection;
+import soot.*;
+import soot.util.*;
+import soot.jimple.*;
+import soot.coffi.ClassFile;
+import soot.coffi.method_info;
+import soot.coffi.CONSTANT_Utf8_info;
+import soot.tagkit.SourceFileTag;
+import soot.coffi.CoffiMethodSource;
 
-
+/**
+ * @ast node
+ * @declaredat java.ast:216
+ */
 public class TryStmt extends Stmt implements Cloneable, FinallyHost {
-    public void flushCache() {
-        super.flushCache();
-        branches_computed = false;
-        branches_value = null;
-        branchesFromFinally_computed = false;
-        branchesFromFinally_value = null;
-        targetBranches_computed = false;
-        targetBranches_value = null;
-        escapedBranches_computed = false;
-        escapedBranches_value = null;
-        isDAafter_Variable_values = null;
-        isDUbefore_Variable_values = null;
-        isDUafter_Variable_values = null;
-        reachableThrow_CatchClause_values = null;
-        canCompleteNormally_computed = false;
-        label_begin_computed = false;
-        label_begin_value = null;
-        label_block_end_computed = false;
-        label_block_end_value = null;
-        label_end_computed = false;
-        label_end_value = null;
-        label_finally_computed = false;
-        label_finally_value = null;
-        label_finally_block_computed = false;
-        label_finally_block_value = null;
-        label_exception_handler_computed = false;
-        label_exception_handler_value = null;
-        label_catch_end_computed = false;
-        label_catch_end_value = null;
-        exceptionRanges_computed = false;
-        exceptionRanges_value = null;
-        handlesException_TypeDecl_values = null;
-        typeError_computed = false;
-        typeError_value = null;
-        typeRuntimeException_computed = false;
-        typeRuntimeException_value = null;
-    }
-    public void flushCollectionCache() {
-        super.flushCollectionCache();
-    }
-     @SuppressWarnings({"unchecked", "cast"})  public TryStmt clone() throws CloneNotSupportedException {
-        TryStmt node = (TryStmt)super.clone();
-        node.branches_computed = false;
-        node.branches_value = null;
-        node.branchesFromFinally_computed = false;
-        node.branchesFromFinally_value = null;
-        node.targetBranches_computed = false;
-        node.targetBranches_value = null;
-        node.escapedBranches_computed = false;
-        node.escapedBranches_value = null;
-        node.isDAafter_Variable_values = null;
-        node.isDUbefore_Variable_values = null;
-        node.isDUafter_Variable_values = null;
-        node.reachableThrow_CatchClause_values = null;
-        node.canCompleteNormally_computed = false;
-        node.label_begin_computed = false;
-        node.label_begin_value = null;
-        node.label_block_end_computed = false;
-        node.label_block_end_value = null;
-        node.label_end_computed = false;
-        node.label_end_value = null;
-        node.label_finally_computed = false;
-        node.label_finally_value = null;
-        node.label_finally_block_computed = false;
-        node.label_finally_block_value = null;
-        node.label_exception_handler_computed = false;
-        node.label_exception_handler_value = null;
-        node.label_catch_end_computed = false;
-        node.label_catch_end_value = null;
-        node.exceptionRanges_computed = false;
-        node.exceptionRanges_value = null;
-        node.handlesException_TypeDecl_values = null;
-        node.typeError_computed = false;
-        node.typeError_value = null;
-        node.typeRuntimeException_computed = false;
-        node.typeRuntimeException_value = null;
-        node.in$Circle(false);
-        node.is$Final(false);
-        return node;
-    }
-     @SuppressWarnings({"unchecked", "cast"})  public TryStmt copy() {
+  /**
+   * @apilevel low-level
+   */
+  public void flushCache() {
+    super.flushCache();
+    branches_computed = false;
+    branches_value = null;
+    branchesFromFinally_computed = false;
+    branchesFromFinally_value = null;
+    targetBranches_computed = false;
+    targetBranches_value = null;
+    escapedBranches_computed = false;
+    escapedBranches_value = null;
+    isDAafter_Variable_values = null;
+    isDUbefore_Variable_values = null;
+    isDUafter_Variable_values = null;
+    catchableException_TypeDecl_values = null;
+    canCompleteNormally_computed = false;
+    label_begin_computed = false;
+    label_begin_value = null;
+    label_block_end_computed = false;
+    label_block_end_value = null;
+    label_end_computed = false;
+    label_end_value = null;
+    label_finally_computed = false;
+    label_finally_value = null;
+    label_finally_block_computed = false;
+    label_finally_block_value = null;
+    label_exception_handler_computed = false;
+    label_exception_handler_value = null;
+    label_catch_end_computed = false;
+    label_catch_end_value = null;
+    exceptionRanges_computed = false;
+    exceptionRanges_value = null;
+    handlesException_TypeDecl_values = null;
+    typeError_computed = false;
+    typeError_value = null;
+    typeRuntimeException_computed = false;
+    typeRuntimeException_value = null;
+  }
+  /**
+   * @apilevel internal
+   */
+  public void flushCollectionCache() {
+    super.flushCollectionCache();
+  }
+  /**
+   * @apilevel internal
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public TryStmt clone() throws CloneNotSupportedException {
+    TryStmt node = (TryStmt)super.clone();
+    node.branches_computed = false;
+    node.branches_value = null;
+    node.branchesFromFinally_computed = false;
+    node.branchesFromFinally_value = null;
+    node.targetBranches_computed = false;
+    node.targetBranches_value = null;
+    node.escapedBranches_computed = false;
+    node.escapedBranches_value = null;
+    node.isDAafter_Variable_values = null;
+    node.isDUbefore_Variable_values = null;
+    node.isDUafter_Variable_values = null;
+    node.catchableException_TypeDecl_values = null;
+    node.canCompleteNormally_computed = false;
+    node.label_begin_computed = false;
+    node.label_begin_value = null;
+    node.label_block_end_computed = false;
+    node.label_block_end_value = null;
+    node.label_end_computed = false;
+    node.label_end_value = null;
+    node.label_finally_computed = false;
+    node.label_finally_value = null;
+    node.label_finally_block_computed = false;
+    node.label_finally_block_value = null;
+    node.label_exception_handler_computed = false;
+    node.label_exception_handler_value = null;
+    node.label_catch_end_computed = false;
+    node.label_catch_end_value = null;
+    node.exceptionRanges_computed = false;
+    node.exceptionRanges_value = null;
+    node.handlesException_TypeDecl_values = null;
+    node.typeError_computed = false;
+    node.typeError_value = null;
+    node.typeRuntimeException_computed = false;
+    node.typeRuntimeException_value = null;
+    node.in$Circle(false);
+    node.is$Final(false);
+    return node;
+  }
+  /**
+   * @apilevel internal
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public TryStmt copy() {
       try {
-          TryStmt node = (TryStmt)clone();
-          if(children != null) node.children = (ASTNode[])children.clone();
-          return node;
+        TryStmt node = (TryStmt)clone();
+        if(children != null) node.children = (ASTNode[])children.clone();
+        return node;
       } catch (CloneNotSupportedException e) {
       }
       System.err.println("Error: Could not clone node of type " + getClass().getName() + "!");
       return null;
+  }
+  /**
+   * @apilevel low-level
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public TryStmt fullCopy() {
+    TryStmt res = (TryStmt)copy();
+    for(int i = 0; i < getNumChildNoTransform(); i++) {
+      ASTNode node = getChildNoTransform(i);
+      if(node != null) node = node.fullCopy();
+      res.setChild(node, i);
     }
-     @SuppressWarnings({"unchecked", "cast"})  public TryStmt fullCopy() {
-        TryStmt res = (TryStmt)copy();
-        for(int i = 0; i < getNumChildNoTransform(); i++) {
-          ASTNode node = getChildNoTransform(i);
-          if(node != null) node = node.fullCopy();
-          res.setChild(node, i);
-        }
-        return res;
+    return res;
     }
-    // Declared in BranchTarget.jrag at line 61
-
+  /**
+   * @ast method 
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:61
+   */
   public void collectBranches(Collection c) {
     c.addAll(escapedBranches());
   }
-
-    // Declared in BranchTarget.jrag at line 162
-
+  /**
+   * @ast method 
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:162
+   */
   public Stmt branchTarget(Stmt branchStmt) {
     if(targetBranches().contains(branchStmt))
       return this;
     return super.branchTarget(branchStmt);
   }
-
-    // Declared in BranchTarget.jrag at line 200
-
+  /**
+   * @ast method 
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:200
+   */
   public void collectFinally(Stmt branchStmt, ArrayList list) {
     if(hasFinally() && !branchesFromFinally().contains(branchStmt))
       list.add(this);
@@ -127,10 +171,11 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       return;
     super.collectFinally(branchStmt, list);
   }
-
-    // Declared in ExceptionHandling.jrag at line 203
-
-
+  /**
+   * @ast method 
+   * @aspect ExceptionHandling
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:217
+   */
   protected boolean reachedException(TypeDecl type) {
     boolean found = false;
     // found is true if the exception type is caught by a catch clause
@@ -149,10 +194,11 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
         return true;
     return hasFinally() && getFinally().reachedException(type);
   }
-
-    // Declared in PrettyPrint.jadd at line 706
-
-
+  /**
+   * @ast method 
+   * @aspect PrettyPrint
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/PrettyPrint.jadd:707
+   */
   public void toString(StringBuffer s) {
     s.append(indent());
     s.append("try ");
@@ -167,22 +213,23 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       getFinally().toString(s);
     }
   }
-
-    // Declared in Statements.jrag at line 321
-
+  /**
+   * @ast method 
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:322
+   */
   public void emitFinallyCode(Body b) {
     if(hasFinally()) {
       // Clear cached attributes to force re-evaluation of local variables
-      //Eric Bodden: I am disabling this, as the method flushCaches() appears to be
-      //undefined on "Block"
-      //getFinally().flushCaches();
+      getFinally().flushCaches();
       getFinally().jimplify2(b);
     }
   }
-
-    // Declared in Statements.jrag at line 357
-
-
+  /**
+   * @ast method 
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:358
+   */
   public void jimplify2(Body b) {
     ArrayList ranges = exceptionRanges();
     b.addLabel(label_begin());
@@ -202,7 +249,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     }
     if(getNumCatchClause() != 0) {
       if(label_block_end == null)
-        label_block_end = getCatchClause(0).label();
+        label_block_end = ((BasicCatch)getCatchClause(0)).label();
       ranges.add(label_block_end);
       ranges.add(label_block_end);
       for(int i = 0; i < getNumCatchClause(); i++) {
@@ -236,10 +283,10 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
         soot.jimple.Stmt stmtEnd = (soot.jimple.Stmt)iter.next();
         if(stmtBegin != stmtEnd) {
           b.addTrap(
-              getCatchClause(i).getParameter().type(),
+              ((BasicCatch)getCatchClause(i)).getParameter().type(),
               stmtBegin,
               stmtEnd,
-              getCatchClause(i).label()
+              ((BasicCatch)getCatchClause(i)).label()
           );
         }
         if(stmtEnd == label_block_end)
@@ -267,10 +314,11 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       */
     }
   }
-
-    // Declared in Statements.jrag at line 466
-
- 
+  /**
+   * @ast method 
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:467
+   */
   public void emitExceptionHandler(Body b) {
     Local l = b.newTemp(typeThrowable().getSootType());
     b.setLine(this);
@@ -282,259 +330,350 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       b.add(throwStmt);
     //}
   }
+  /**
+   * @ast method 
+   * @declaredat java.ast:1
+   */
+  public TryStmt() {
+    super();
 
-    // Declared in java.ast at line 3
-    // Declared in java.ast line 222
+    setChild(new List(), 1);
+    setChild(new Opt(), 2);
 
-    public TryStmt() {
-        super();
-
-        setChild(new List(), 1);
-        setChild(new Opt(), 2);
-
-    }
-
-    // Declared in java.ast at line 12
-
-
-    // Declared in java.ast line 222
-    public TryStmt(Block p0, List<CatchClause> p1, Opt<Block> p2) {
-        setChild(p0, 0);
-        setChild(p1, 1);
-        setChild(p2, 2);
-    }
-
-    // Declared in java.ast at line 18
-
-
+  }
+  /**
+   * @ast method 
+   * @declaredat java.ast:9
+   */
+  public TryStmt(Block p0, List<CatchClause> p1, Opt<Block> p2) {
+    setChild(p0, 0);
+    setChild(p1, 1);
+    setChild(p2, 2);
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:17
+   */
   protected int numChildren() {
     return 3;
   }
-
-    // Declared in java.ast at line 21
-
-    public boolean mayHaveRewrite() {
-        return false;
+  /**
+   * @apilevel internal
+   * @ast method 
+   * @declaredat java.ast:23
+   */
+  public boolean mayHaveRewrite() {
+    return false;
+  }
+  /**
+   * Setter for Block
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:5
+   */
+  public void setBlock(Block node) {
+    setChild(node, 0);
+  }
+  /**
+   * Getter for Block
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:12
+   */
+  public Block getBlock() {
+    return (Block)getChild(0);
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:18
+   */
+  public Block getBlockNoTransform() {
+    return (Block)getChildNoTransform(0);
+  }
+  /**
+   * Setter for CatchClauseList
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:5
+   */
+  public void setCatchClauseList(List<CatchClause> list) {
+    setChild(list, 1);
+  }
+  /**
+   * @return number of children in CatchClauseList
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:12
+   */
+  public int getNumCatchClause() {
+    return getCatchClauseList().getNumChild();
+  }
+  /**
+   * Getter for child in list CatchClauseList
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:19
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public CatchClause getCatchClause(int i) {
+    return (CatchClause)getCatchClauseList().getChild(i);
+  }
+  /**
+   * Add element to list CatchClauseList
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:27
+   */
+  public void addCatchClause(CatchClause node) {
+    List<CatchClause> list = (parent == null || state == null) ? getCatchClauseListNoTransform() : getCatchClauseList();
+    list.addChild(node);
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:34
+   */
+  public void addCatchClauseNoTransform(CatchClause node) {
+    List<CatchClause> list = getCatchClauseListNoTransform();
+    list.addChild(node);
+  }
+  /**
+   * Setter for child in list CatchClauseList
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:42
+   */
+  public void setCatchClause(CatchClause node, int i) {
+    List<CatchClause> list = getCatchClauseList();
+    list.setChild(node, i);
+  }
+  /**
+   * Getter for CatchClause list.
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:50
+   */
+  public List<CatchClause> getCatchClauses() {
+    return getCatchClauseList();
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:56
+   */
+  public List<CatchClause> getCatchClausesNoTransform() {
+    return getCatchClauseListNoTransform();
+  }
+  /**
+   * Getter for list CatchClauseList
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:63
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public List<CatchClause> getCatchClauseList() {
+    List<CatchClause> list = (List<CatchClause>)getChild(1);
+    list.getNumChild();
+    return list;
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:72
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public List<CatchClause> getCatchClauseListNoTransform() {
+    return (List<CatchClause>)getChildNoTransform(1);
+  }
+  /**
+   * Setter for FinallyOpt
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:5
+   */
+  public void setFinallyOpt(Opt<Block> opt) {
+    setChild(opt, 2);
+  }
+  /**
+   * Does this node have a Finally child?
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:12
+   */
+  public boolean hasFinally() {
+    return getFinallyOpt().getNumChild() != 0;
+  }
+  /**
+   * Getter for optional child Finally
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:19
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Block getFinally() {
+    return (Block)getFinallyOpt().getChild(0);
+  }
+  /**
+   * Setter for optional child Finally
+   * @apilevel high-level
+   * @ast method 
+   * @declaredat java.ast:27
+   */
+  public void setFinally(Block node) {
+    getFinallyOpt().setChild(node, 0);
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:37
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Opt<Block> getFinallyOpt() {
+    return (Opt<Block>)getChild(2);
+  }
+  /**
+   * @apilevel low-level
+   * @ast method 
+   * @declaredat java.ast:44
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Opt<Block> getFinallyOptNoTransform() {
+    return (Opt<Block>)getChildNoTransform(2);
+  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean branches_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected Collection branches_value;
+  /**
+   * @attribute syn
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:116
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Collection branches() {
+    if(branches_computed) {
+      return branches_value;
     }
-
-    // Declared in java.ast at line 2
-    // Declared in java.ast line 222
-    public void setBlock(Block node) {
-        setChild(node, 0);
-    }
-
-    // Declared in java.ast at line 5
-
-    public Block getBlock() {
-        return (Block)getChild(0);
-    }
-
-    // Declared in java.ast at line 9
-
-
-    public Block getBlockNoTransform() {
-        return (Block)getChildNoTransform(0);
-    }
-
-    // Declared in java.ast at line 2
-    // Declared in java.ast line 222
-    public void setCatchClauseList(List<CatchClause> list) {
-        setChild(list, 1);
-    }
-
-    // Declared in java.ast at line 6
-
-
-    public int getNumCatchClause() {
-        return getCatchClauseList().getNumChild();
-    }
-
-    // Declared in java.ast at line 10
-
-
-     @SuppressWarnings({"unchecked", "cast"})  public CatchClause getCatchClause(int i) {
-        return (CatchClause)getCatchClauseList().getChild(i);
-    }
-
-    // Declared in java.ast at line 14
-
-
-    public void addCatchClause(CatchClause node) {
-        List<CatchClause> list = (parent == null || state == null) ? getCatchClauseListNoTransform() : getCatchClauseList();
-        list.addChild(node);
-    }
-
-    // Declared in java.ast at line 19
-
-
-    public void addCatchClauseNoTransform(CatchClause node) {
-        List<CatchClause> list = getCatchClauseListNoTransform();
-        list.addChild(node);
-    }
-
-    // Declared in java.ast at line 24
-
-
-    public void setCatchClause(CatchClause node, int i) {
-        List<CatchClause> list = getCatchClauseList();
-        list.setChild(node, i);
-    }
-
-    // Declared in java.ast at line 28
-
-    public List<CatchClause> getCatchClauses() {
-        return getCatchClauseList();
-    }
-
-    // Declared in java.ast at line 31
-
-    public List<CatchClause> getCatchClausesNoTransform() {
-        return getCatchClauseListNoTransform();
-    }
-
-    // Declared in java.ast at line 35
-
-
-     @SuppressWarnings({"unchecked", "cast"})  public List<CatchClause> getCatchClauseList() {
-        List<CatchClause> list = (List<CatchClause>)getChild(1);
-        list.getNumChild();
-        return list;
-    }
-
-    // Declared in java.ast at line 41
-
-
-     @SuppressWarnings({"unchecked", "cast"})  public List<CatchClause> getCatchClauseListNoTransform() {
-        return (List<CatchClause>)getChildNoTransform(1);
-    }
-
-    // Declared in java.ast at line 2
-    // Declared in java.ast line 222
-    public void setFinallyOpt(Opt<Block> opt) {
-        setChild(opt, 2);
-    }
-
-    // Declared in java.ast at line 6
-
-
-    public boolean hasFinally() {
-        return getFinallyOpt().getNumChild() != 0;
-    }
-
-    // Declared in java.ast at line 10
-
-
-     @SuppressWarnings({"unchecked", "cast"})  public Block getFinally() {
-        return (Block)getFinallyOpt().getChild(0);
-    }
-
-    // Declared in java.ast at line 14
-
-
-    public void setFinally(Block node) {
-        getFinallyOpt().setChild(node, 0);
-    }
-
-    // Declared in java.ast at line 17
-
-     @SuppressWarnings({"unchecked", "cast"})  public Opt<Block> getFinallyOpt() {
-        return (Opt<Block>)getChild(2);
-    }
-
-    // Declared in java.ast at line 21
-
-
-     @SuppressWarnings({"unchecked", "cast"})  public Opt<Block> getFinallyOptNoTransform() {
-        return (Opt<Block>)getChildNoTransform(2);
-    }
-
-    protected boolean branches_computed = false;
-    protected Collection branches_value;
-    // Declared in BranchTarget.jrag at line 116
- @SuppressWarnings({"unchecked", "cast"})     public Collection branches() {
-        if(branches_computed) {
-            return branches_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        branches_value = branches_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            branches_computed = true;
-        return branches_value;
-    }
-
-    private Collection branches_compute() {
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    branches_value = branches_compute();
+if(isFinal && num == state().boundariesCrossed) branches_computed = true;
+    return branches_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private Collection branches_compute() {
     HashSet set = new HashSet();
     getBlock().collectBranches(set);
     for(int i = 0; i < getNumCatchClause(); i++)
       getCatchClause(i).collectBranches(set);
     return set;
   }
-
-    protected boolean branchesFromFinally_computed = false;
-    protected Collection branchesFromFinally_value;
-    // Declared in BranchTarget.jrag at line 124
- @SuppressWarnings({"unchecked", "cast"})     public Collection branchesFromFinally() {
-        if(branchesFromFinally_computed) {
-            return branchesFromFinally_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        branchesFromFinally_value = branchesFromFinally_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            branchesFromFinally_computed = true;
-        return branchesFromFinally_value;
+  /**
+   * @apilevel internal
+   */
+  protected boolean branchesFromFinally_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected Collection branchesFromFinally_value;
+  /**
+   * @attribute syn
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:124
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Collection branchesFromFinally() {
+    if(branchesFromFinally_computed) {
+      return branchesFromFinally_value;
     }
-
-    private Collection branchesFromFinally_compute() {
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    branchesFromFinally_value = branchesFromFinally_compute();
+if(isFinal && num == state().boundariesCrossed) branchesFromFinally_computed = true;
+    return branchesFromFinally_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private Collection branchesFromFinally_compute() {
     HashSet set = new HashSet();
     if(hasFinally())
       getFinally().collectBranches(set);
     return set;
   }
-
-    protected boolean targetBranches_computed = false;
-    protected Collection targetBranches_value;
-    // Declared in BranchTarget.jrag at line 132
- @SuppressWarnings({"unchecked", "cast"})     public Collection targetBranches() {
-        if(targetBranches_computed) {
-            return targetBranches_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        targetBranches_value = targetBranches_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            targetBranches_computed = true;
-        return targetBranches_value;
+  /**
+   * @apilevel internal
+   */
+  protected boolean targetBranches_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected Collection targetBranches_value;
+  /**
+   * @attribute syn
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:132
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Collection targetBranches() {
+    if(targetBranches_computed) {
+      return targetBranches_value;
     }
-
-    private Collection targetBranches_compute() {
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    targetBranches_value = targetBranches_compute();
+if(isFinal && num == state().boundariesCrossed) targetBranches_computed = true;
+    return targetBranches_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private Collection targetBranches_compute() {
     HashSet set = new HashSet();
     if(hasFinally() && !getFinally().canCompleteNormally())
       set.addAll(branches());
     return set;
   }
-
-    protected boolean escapedBranches_computed = false;
-    protected Collection escapedBranches_value;
-    // Declared in BranchTarget.jrag at line 140
- @SuppressWarnings({"unchecked", "cast"})     public Collection escapedBranches() {
-        if(escapedBranches_computed) {
-            return escapedBranches_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        escapedBranches_value = escapedBranches_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            escapedBranches_computed = true;
-        return escapedBranches_value;
+  /**
+   * @apilevel internal
+   */
+  protected boolean escapedBranches_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected Collection escapedBranches_value;
+  /**
+   * @attribute syn
+   * @aspect BranchTarget
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:140
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public Collection escapedBranches() {
+    if(escapedBranches_computed) {
+      return escapedBranches_value;
     }
-
-    private Collection escapedBranches_compute() {
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    escapedBranches_value = escapedBranches_compute();
+if(isFinal && num == state().boundariesCrossed) escapedBranches_computed = true;
+    return escapedBranches_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private Collection escapedBranches_compute() {
     HashSet set = new HashSet();
     if(hasFinally())
       set.addAll(branchesFromFinally());
@@ -542,24 +681,30 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       set.addAll(branches());
     return set;
   }
-
-    // Declared in DefiniteAssignment.jrag at line 669
- @SuppressWarnings({"unchecked", "cast"})     public boolean isDAafter(Variable v) {
-        Object _parameters = v;
-if(isDAafter_Variable_values == null) isDAafter_Variable_values = new java.util.HashMap(4);
-        if(isDAafter_Variable_values.containsKey(_parameters)) {
-            return ((Boolean)isDAafter_Variable_values.get(_parameters)).booleanValue();
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        boolean isDAafter_Variable_value = isDAafter_compute(v);
-        if(isFinal && num == state().boundariesCrossed)
-            isDAafter_Variable_values.put(_parameters, Boolean.valueOf(isDAafter_Variable_value));
-        return isDAafter_Variable_value;
+  protected java.util.Map isDAafter_Variable_values;
+  /**
+   * @attribute syn
+   * @aspect DA
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:665
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean isDAafter(Variable v) {
+    Object _parameters = v;
+    if(isDAafter_Variable_values == null) isDAafter_Variable_values = new java.util.HashMap(4);
+    if(isDAafter_Variable_values.containsKey(_parameters)) {
+      return ((Boolean)isDAafter_Variable_values.get(_parameters)).booleanValue();
     }
-
-    private boolean isDAafter_compute(Variable v) {
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    boolean isDAafter_Variable_value = isDAafter_compute(v);
+if(isFinal && num == state().boundariesCrossed) isDAafter_Variable_values.put(_parameters, Boolean.valueOf(isDAafter_Variable_value));
+    return isDAafter_Variable_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean isDAafter_compute(Variable v) {
     // 16.2.15 4th bullet
     if(!hasFinally()) {
       if(!getBlock().isDAafter(v))
@@ -581,107 +726,130 @@ if(isDAafter_Variable_values == null) isDAafter_Variable_values = new java.util.
       return true;
     }
   }
-
-    // Declared in DefiniteAssignment.jrag at line 920
- @SuppressWarnings({"unchecked", "cast"})     public boolean isDUafterFinally(Variable v) {
-        ASTNode$State state = state();
-        boolean isDUafterFinally_Variable_value = isDUafterFinally_compute(v);
-        return isDUafterFinally_Variable_value;
+  /**
+   * @attribute syn
+   * @aspect DU
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:913
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean isDUafterFinally(Variable v) {
+      ASTNode$State state = state();
+    boolean isDUafterFinally_Variable_value = isDUafterFinally_compute(v);
+    return isDUafterFinally_Variable_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean isDUafterFinally_compute(Variable v) {  return getFinally().isDUafter(v);  }
+  /**
+   * @attribute syn
+   * @aspect DU
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:916
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean isDAafterFinally(Variable v) {
+      ASTNode$State state = state();
+    boolean isDAafterFinally_Variable_value = isDAafterFinally_compute(v);
+    return isDAafterFinally_Variable_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean isDAafterFinally_compute(Variable v) {  return getFinally().isDAafter(v);  }
+  protected java.util.Map isDUbefore_Variable_values;
+  /**
+   * @attribute syn
+   * @aspect DU
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:1184
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean isDUbefore(Variable v) {
+    Object _parameters = v;
+    if(isDUbefore_Variable_values == null) isDUbefore_Variable_values = new java.util.HashMap(4);
+    ASTNode$State.CircularValue _value;
+    if(isDUbefore_Variable_values.containsKey(_parameters)) {
+      Object _o = isDUbefore_Variable_values.get(_parameters);
+      if(!(_o instanceof ASTNode$State.CircularValue)) {
+        return ((Boolean)_o).booleanValue();
+      }
+      else
+        _value = (ASTNode$State.CircularValue)_o;
     }
-
-    private boolean isDUafterFinally_compute(Variable v) {  return getFinally().isDUafter(v);  }
-
-    // Declared in DefiniteAssignment.jrag at line 923
- @SuppressWarnings({"unchecked", "cast"})     public boolean isDAafterFinally(Variable v) {
-        ASTNode$State state = state();
-        boolean isDAafterFinally_Variable_value = isDAafterFinally_compute(v);
-        return isDAafterFinally_Variable_value;
+    else {
+      _value = new ASTNode$State.CircularValue();
+      isDUbefore_Variable_values.put(_parameters, _value);
+      _value.value = Boolean.valueOf(true);
     }
-
-    private boolean isDAafterFinally_compute(Variable v) {  return getFinally().isDAafter(v);  }
-
-    protected java.util.Map isDUbefore_Variable_values;
-    // Declared in DefiniteAssignment.jrag at line 1191
- @SuppressWarnings({"unchecked", "cast"})     public boolean isDUbefore(Variable v) {
-        Object _parameters = v;
-if(isDUbefore_Variable_values == null) isDUbefore_Variable_values = new java.util.HashMap(4);
-        ASTNode$State.CircularValue _value;
-        if(isDUbefore_Variable_values.containsKey(_parameters)) {
-            Object _o = isDUbefore_Variable_values.get(_parameters);
-            if(!(_o instanceof ASTNode$State.CircularValue)) {
-                return ((Boolean)_o).booleanValue();
-            }
-            else
-                _value = (ASTNode$State.CircularValue)_o;
+    ASTNode$State state = state();
+    if (!state.IN_CIRCLE) {
+      state.IN_CIRCLE = true;
+      int num = state.boundariesCrossed;
+      boolean isFinal = this.is$Final();
+      boolean new_isDUbefore_Variable_value;
+      do {
+        _value.visited = new Integer(state.CIRCLE_INDEX);
+        state.CHANGE = false;
+        new_isDUbefore_Variable_value = isDUbefore_compute(v);
+        if (new_isDUbefore_Variable_value!=((Boolean)_value.value).booleanValue()) {
+          state.CHANGE = true;
+          _value.value = Boolean.valueOf(new_isDUbefore_Variable_value);
         }
-        else {
-            _value = new ASTNode$State.CircularValue();
-            isDUbefore_Variable_values.put(_parameters, _value);
-            _value.value = Boolean.valueOf(true);
-        }
-        ASTNode$State state = state();
-        if (!state.IN_CIRCLE) {
-            state.IN_CIRCLE = true;
-            int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-            boolean new_isDUbefore_Variable_value;
-            do {
-                _value.visited = new Integer(state.CIRCLE_INDEX);
-                state.CHANGE = false;
-                new_isDUbefore_Variable_value = isDUbefore_compute(v);
-                if (new_isDUbefore_Variable_value!=((Boolean)_value.value).booleanValue()) {
-                    state.CHANGE = true;
-                    _value.value = Boolean.valueOf(new_isDUbefore_Variable_value);
-                }
-                state.CIRCLE_INDEX++;
-            } while (state.CHANGE);
-            if(isFinal && num == state().boundariesCrossed)
-{
-                isDUbefore_Variable_values.put(_parameters, new_isDUbefore_Variable_value);
-            }
-            else {
-                isDUbefore_Variable_values.remove(_parameters);
-            state.RESET_CYCLE = true;
-            isDUbefore_compute(v);
-            state.RESET_CYCLE = false;
-            }
-            state.IN_CIRCLE = false; 
-            return new_isDUbefore_Variable_value;
-        }
-        if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-            _value.visited = new Integer(state.CIRCLE_INDEX);
-            boolean new_isDUbefore_Variable_value = isDUbefore_compute(v);
-            if (state.RESET_CYCLE) {
-                isDUbefore_Variable_values.remove(_parameters);
-            }
-            else if (new_isDUbefore_Variable_value!=((Boolean)_value.value).booleanValue()) {
-                state.CHANGE = true;
-                _value.value = new_isDUbefore_Variable_value;
-            }
-            return new_isDUbefore_Variable_value;
-        }
-        return ((Boolean)_value.value).booleanValue();
+        state.CIRCLE_INDEX++;
+      } while (state.CHANGE);
+      if(isFinal && num == state().boundariesCrossed) {
+        isDUbefore_Variable_values.put(_parameters, new_isDUbefore_Variable_value);
+      }
+      else {
+        isDUbefore_Variable_values.remove(_parameters);
+      state.RESET_CYCLE = true;
+      isDUbefore_compute(v);
+      state.RESET_CYCLE = false;
+      }
+      state.IN_CIRCLE = false; 
+      return new_isDUbefore_Variable_value;
     }
-
-    private boolean isDUbefore_compute(Variable v) {  return super.isDUbefore(v);  }
-
-    // Declared in DefiniteAssignment.jrag at line 1227
- @SuppressWarnings({"unchecked", "cast"})     public boolean isDUafter(Variable v) {
-        Object _parameters = v;
-if(isDUafter_Variable_values == null) isDUafter_Variable_values = new java.util.HashMap(4);
-        if(isDUafter_Variable_values.containsKey(_parameters)) {
-            return ((Boolean)isDUafter_Variable_values.get(_parameters)).booleanValue();
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        boolean isDUafter_Variable_value = isDUafter_compute(v);
-        if(isFinal && num == state().boundariesCrossed)
-            isDUafter_Variable_values.put(_parameters, Boolean.valueOf(isDUafter_Variable_value));
-        return isDUafter_Variable_value;
+    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
+      _value.visited = new Integer(state.CIRCLE_INDEX);
+      boolean new_isDUbefore_Variable_value = isDUbefore_compute(v);
+      if (state.RESET_CYCLE) {
+        isDUbefore_Variable_values.remove(_parameters);
+      }
+      else if (new_isDUbefore_Variable_value!=((Boolean)_value.value).booleanValue()) {
+        state.CHANGE = true;
+        _value.value = new_isDUbefore_Variable_value;
+      }
+      return new_isDUbefore_Variable_value;
     }
-
-    private boolean isDUafter_compute(Variable v) {
+    return ((Boolean)_value.value).booleanValue();
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean isDUbefore_compute(Variable v) {  return super.isDUbefore(v);  }
+  protected java.util.Map isDUafter_Variable_values;
+  /**
+   * @attribute syn
+   * @aspect DU
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:1220
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean isDUafter(Variable v) {
+    Object _parameters = v;
+    if(isDUafter_Variable_values == null) isDUafter_Variable_values = new java.util.HashMap(4);
+    if(isDUafter_Variable_values.containsKey(_parameters)) {
+      return ((Boolean)isDUafter_Variable_values.get(_parameters)).booleanValue();
+    }
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    boolean isDUafter_Variable_value = isDUafter_compute(v);
+if(isFinal && num == state().boundariesCrossed) isDUafter_Variable_values.put(_parameters, Boolean.valueOf(isDUafter_Variable_value));
+    return isDUafter_Variable_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean isDUafter_compute(Variable v) {
     // 16.2.14 4th bullet
     if(!hasFinally()) {
       if(!getBlock().isDUafter(v))
@@ -694,300 +862,459 @@ if(isDUafter_Variable_values == null) isDUafter_Variable_values = new java.util.
     else
       return getFinally().isDUafter(v);
   }
-
-    protected java.util.Map reachableThrow_CatchClause_values;
-    // Declared in ExceptionHandling.jrag at line 193
- @SuppressWarnings({"unchecked", "cast"})     public boolean reachableThrow(CatchClause c) {
-        Object _parameters = c;
-if(reachableThrow_CatchClause_values == null) reachableThrow_CatchClause_values = new java.util.HashMap(4);
-        if(reachableThrow_CatchClause_values.containsKey(_parameters)) {
-            return ((Boolean)reachableThrow_CatchClause_values.get(_parameters)).booleanValue();
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        boolean reachableThrow_CatchClause_value = reachableThrow_compute(c);
-        if(isFinal && num == state().boundariesCrossed)
-            reachableThrow_CatchClause_values.put(_parameters, Boolean.valueOf(reachableThrow_CatchClause_value));
-        return reachableThrow_CatchClause_value;
+  protected java.util.Map catchableException_TypeDecl_values;
+  /**
+   * The block of the try statement can throw an exception of
+   * a type assignable to the given type.
+   * @attribute syn
+   * @aspect ExceptionHandling
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:207
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean catchableException(TypeDecl type) {
+    Object _parameters = type;
+    if(catchableException_TypeDecl_values == null) catchableException_TypeDecl_values = new java.util.HashMap(4);
+    if(catchableException_TypeDecl_values.containsKey(_parameters)) {
+      return ((Boolean)catchableException_TypeDecl_values.get(_parameters)).booleanValue();
     }
-
-    private boolean reachableThrow_compute(CatchClause c) {  return getBlock().reachedException(c.getParameter().type());  }
-
-    // Declared in UnreachableStatements.jrag at line 113
- @SuppressWarnings({"unchecked", "cast"})     public boolean canCompleteNormally() {
-        if(canCompleteNormally_computed) {
-            return canCompleteNormally_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        canCompleteNormally_value = canCompleteNormally_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            canCompleteNormally_computed = true;
-        return canCompleteNormally_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    boolean catchableException_TypeDecl_value = catchableException_compute(type);
+if(isFinal && num == state().boundariesCrossed) catchableException_TypeDecl_values.put(_parameters, Boolean.valueOf(catchableException_TypeDecl_value));
+    return catchableException_TypeDecl_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean catchableException_compute(TypeDecl type) {  return getBlock().reachedException(type);  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean canCompleteNormally_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected boolean canCompleteNormally_value;
+  /**
+   * @attribute syn
+   * @aspect UnreachableStatements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:113
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean canCompleteNormally() {
+    if(canCompleteNormally_computed) {
+      return canCompleteNormally_value;
     }
-
-    private boolean canCompleteNormally_compute() {
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    canCompleteNormally_value = canCompleteNormally_compute();
+if(isFinal && num == state().boundariesCrossed) canCompleteNormally_computed = true;
+    return canCompleteNormally_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean canCompleteNormally_compute() {
      boolean anyCatchClauseCompleteNormally = false;
      for(int i = 0; i < getNumCatchClause() && !anyCatchClauseCompleteNormally; i++)
        anyCatchClauseCompleteNormally = getCatchClause(i).getBlock().canCompleteNormally();
      return (getBlock().canCompleteNormally() || anyCatchClauseCompleteNormally) &&
        (!hasFinally() || getFinally().canCompleteNormally());
   }
-
-    // Declared in Statements.jrag at line 207
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt break_label() {
-        ASTNode$State state = state();
-        soot.jimple.Stmt break_label_value = break_label_compute();
-        return break_label_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:208
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt break_label() {
+      ASTNode$State state = state();
+    soot.jimple.Stmt break_label_value = break_label_compute();
+    return break_label_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt break_label_compute() {  return label_finally();  }
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:232
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt continue_label() {
+      ASTNode$State state = state();
+    soot.jimple.Stmt continue_label_value = continue_label_compute();
+    return continue_label_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt continue_label_compute() {  return label_finally();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_begin_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_begin_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:339
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_begin() {
+    if(label_begin_computed) {
+      return label_begin_value;
     }
-
-    private soot.jimple.Stmt break_label_compute() {  return label_finally();  }
-
-    // Declared in Statements.jrag at line 231
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt continue_label() {
-        ASTNode$State state = state();
-        soot.jimple.Stmt continue_label_value = continue_label_compute();
-        return continue_label_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_begin_value = label_begin_compute();
+if(isFinal && num == state().boundariesCrossed) label_begin_computed = true;
+    return label_begin_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_begin_compute() {  return newLabel();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_block_end_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_block_end_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:340
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_block_end() {
+    if(label_block_end_computed) {
+      return label_block_end_value;
     }
-
-    private soot.jimple.Stmt continue_label_compute() {  return label_finally();  }
-
-    protected boolean label_begin_computed = false;
-    protected soot.jimple.Stmt label_begin_value;
-    // Declared in Statements.jrag at line 338
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_begin() {
-        if(label_begin_computed) {
-            return label_begin_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_begin_value = label_begin_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_begin_computed = true;
-        return label_begin_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_block_end_value = label_block_end_compute();
+if(isFinal && num == state().boundariesCrossed) label_block_end_computed = true;
+    return label_block_end_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_block_end_compute() {  return newLabel();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_end_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_end_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:341
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_end() {
+    if(label_end_computed) {
+      return label_end_value;
     }
-
-    private soot.jimple.Stmt label_begin_compute() {  return newLabel();  }
-
-    protected boolean label_block_end_computed = false;
-    protected soot.jimple.Stmt label_block_end_value;
-    // Declared in Statements.jrag at line 339
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_block_end() {
-        if(label_block_end_computed) {
-            return label_block_end_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_block_end_value = label_block_end_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_block_end_computed = true;
-        return label_block_end_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_end_value = label_end_compute();
+if(isFinal && num == state().boundariesCrossed) label_end_computed = true;
+    return label_end_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_end_compute() {  return newLabel();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_finally_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_finally_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:342
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_finally() {
+    if(label_finally_computed) {
+      return label_finally_value;
     }
-
-    private soot.jimple.Stmt label_block_end_compute() {  return newLabel();  }
-
-    protected boolean label_end_computed = false;
-    protected soot.jimple.Stmt label_end_value;
-    // Declared in Statements.jrag at line 340
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_end() {
-        if(label_end_computed) {
-            return label_end_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_end_value = label_end_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_end_computed = true;
-        return label_end_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_finally_value = label_finally_compute();
+if(isFinal && num == state().boundariesCrossed) label_finally_computed = true;
+    return label_finally_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_finally_compute() {  return newLabel();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_finally_block_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_finally_block_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:343
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_finally_block() {
+    if(label_finally_block_computed) {
+      return label_finally_block_value;
     }
-
-    private soot.jimple.Stmt label_end_compute() {  return newLabel();  }
-
-    protected boolean label_finally_computed = false;
-    protected soot.jimple.Stmt label_finally_value;
-    // Declared in Statements.jrag at line 341
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_finally() {
-        if(label_finally_computed) {
-            return label_finally_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_finally_value = label_finally_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_finally_computed = true;
-        return label_finally_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_finally_block_value = label_finally_block_compute();
+if(isFinal && num == state().boundariesCrossed) label_finally_block_computed = true;
+    return label_finally_block_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_finally_block_compute() {  return newLabel();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_exception_handler_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_exception_handler_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:344
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_exception_handler() {
+    if(label_exception_handler_computed) {
+      return label_exception_handler_value;
     }
-
-    private soot.jimple.Stmt label_finally_compute() {  return newLabel();  }
-
-    protected boolean label_finally_block_computed = false;
-    protected soot.jimple.Stmt label_finally_block_value;
-    // Declared in Statements.jrag at line 342
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_finally_block() {
-        if(label_finally_block_computed) {
-            return label_finally_block_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_finally_block_value = label_finally_block_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_finally_block_computed = true;
-        return label_finally_block_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_exception_handler_value = label_exception_handler_compute();
+if(isFinal && num == state().boundariesCrossed) label_exception_handler_computed = true;
+    return label_exception_handler_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_exception_handler_compute() {  return newLabel();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean label_catch_end_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_catch_end_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:345
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public soot.jimple.Stmt label_catch_end() {
+    if(label_catch_end_computed) {
+      return label_catch_end_value;
     }
-
-    private soot.jimple.Stmt label_finally_block_compute() {  return newLabel();  }
-
-    protected boolean label_exception_handler_computed = false;
-    protected soot.jimple.Stmt label_exception_handler_value;
-    // Declared in Statements.jrag at line 343
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_exception_handler() {
-        if(label_exception_handler_computed) {
-            return label_exception_handler_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_exception_handler_value = label_exception_handler_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_exception_handler_computed = true;
-        return label_exception_handler_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    label_catch_end_value = label_catch_end_compute();
+if(isFinal && num == state().boundariesCrossed) label_catch_end_computed = true;
+    return label_catch_end_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private soot.jimple.Stmt label_catch_end_compute() {  return newLabel();  }
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:347
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean needsFinallyTrap() {
+      ASTNode$State state = state();
+    boolean needsFinallyTrap_value = needsFinallyTrap_compute();
+    return needsFinallyTrap_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private boolean needsFinallyTrap_compute() {  return getNumCatchClause() != 0 || enclosedByExceptionHandler();  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean exceptionRanges_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected ArrayList exceptionRanges_value;
+  /**
+   * @attribute syn
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:451
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public ArrayList exceptionRanges() {
+    if(exceptionRanges_computed) {
+      return exceptionRanges_value;
     }
-
-    private soot.jimple.Stmt label_exception_handler_compute() {  return newLabel();  }
-
-    protected boolean label_catch_end_computed = false;
-    protected soot.jimple.Stmt label_catch_end_value;
-    // Declared in Statements.jrag at line 344
- @SuppressWarnings({"unchecked", "cast"})     public soot.jimple.Stmt label_catch_end() {
-        if(label_catch_end_computed) {
-            return label_catch_end_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        label_catch_end_value = label_catch_end_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            label_catch_end_computed = true;
-        return label_catch_end_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    exceptionRanges_value = exceptionRanges_compute();
+if(isFinal && num == state().boundariesCrossed) exceptionRanges_computed = true;
+    return exceptionRanges_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  private ArrayList exceptionRanges_compute() {  return new ArrayList();  }
+  protected java.util.Map handlesException_TypeDecl_values;
+  /**
+   * @attribute inh
+   * @aspect ExceptionHandling
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:35
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean handlesException(TypeDecl exceptionType) {
+    Object _parameters = exceptionType;
+    if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = new java.util.HashMap(4);
+    if(handlesException_TypeDecl_values.containsKey(_parameters)) {
+      return ((Boolean)handlesException_TypeDecl_values.get(_parameters)).booleanValue();
     }
-
-    private soot.jimple.Stmt label_catch_end_compute() {  return newLabel();  }
-
-    // Declared in Statements.jrag at line 346
- @SuppressWarnings({"unchecked", "cast"})     public boolean needsFinallyTrap() {
-        ASTNode$State state = state();
-        boolean needsFinallyTrap_value = needsFinallyTrap_compute();
-        return needsFinallyTrap_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    boolean handlesException_TypeDecl_value = getParent().Define_boolean_handlesException(this, null, exceptionType);
+if(isFinal && num == state().boundariesCrossed) handlesException_TypeDecl_values.put(_parameters, Boolean.valueOf(handlesException_TypeDecl_value));
+    return handlesException_TypeDecl_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean typeError_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected TypeDecl typeError_value;
+  /**
+   * @attribute inh
+   * @aspect UnreachableStatements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:138
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public TypeDecl typeError() {
+    if(typeError_computed) {
+      return typeError_value;
     }
-
-    private boolean needsFinallyTrap_compute() {  return getNumCatchClause() != 0 || enclosedByExceptionHandler();  }
-
-    protected boolean exceptionRanges_computed = false;
-    protected ArrayList exceptionRanges_value;
-    // Declared in Statements.jrag at line 450
- @SuppressWarnings({"unchecked", "cast"})     public ArrayList exceptionRanges() {
-        if(exceptionRanges_computed) {
-            return exceptionRanges_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        exceptionRanges_value = exceptionRanges_compute();
-        if(isFinal && num == state().boundariesCrossed)
-            exceptionRanges_computed = true;
-        return exceptionRanges_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    typeError_value = getParent().Define_TypeDecl_typeError(this, null);
+if(isFinal && num == state().boundariesCrossed) typeError_computed = true;
+    return typeError_value;
+  }
+  /**
+   * @apilevel internal
+   */
+  protected boolean typeRuntimeException_computed = false;
+  /**
+   * @apilevel internal
+   */
+  protected TypeDecl typeRuntimeException_value;
+  /**
+   * @attribute inh
+   * @aspect UnreachableStatements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:139
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public TypeDecl typeRuntimeException() {
+    if(typeRuntimeException_computed) {
+      return typeRuntimeException_value;
     }
-
-    private ArrayList exceptionRanges_compute() {  return new ArrayList();  }
-
-    protected java.util.Map handlesException_TypeDecl_values;
-    // Declared in ExceptionHandling.jrag at line 35
- @SuppressWarnings({"unchecked", "cast"})     public boolean handlesException(TypeDecl exceptionType) {
-        Object _parameters = exceptionType;
-if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = new java.util.HashMap(4);
-        if(handlesException_TypeDecl_values.containsKey(_parameters)) {
-            return ((Boolean)handlesException_TypeDecl_values.get(_parameters)).booleanValue();
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        boolean handlesException_TypeDecl_value = getParent().Define_boolean_handlesException(this, null, exceptionType);
-        if(isFinal && num == state().boundariesCrossed)
-            handlesException_TypeDecl_values.put(_parameters, Boolean.valueOf(handlesException_TypeDecl_value));
-        return handlesException_TypeDecl_value;
+      ASTNode$State state = state();
+  int num = state.boundariesCrossed;
+  boolean isFinal = this.is$Final();
+    typeRuntimeException_value = getParent().Define_TypeDecl_typeRuntimeException(this, null);
+if(isFinal && num == state().boundariesCrossed) typeRuntimeException_computed = true;
+    return typeRuntimeException_value;
+  }
+  /**
+   * @attribute inh
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:348
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public boolean enclosedByExceptionHandler() {
+      ASTNode$State state = state();
+    boolean enclosedByExceptionHandler_value = getParent().Define_boolean_enclosedByExceptionHandler(this, null);
+    return enclosedByExceptionHandler_value;
+  }
+  /**
+   * @attribute inh
+   * @aspect Statements
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:464
+   */
+  @SuppressWarnings({"unchecked", "cast"})
+  public TypeDecl typeThrowable() {
+      ASTNode$State state = state();
+    TypeDecl typeThrowable_value = getParent().Define_TypeDecl_typeThrowable(this, null);
+    return typeThrowable_value;
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:664
+   * @apilevel internal
+   */
+  public boolean Define_boolean_isDAbefore(ASTNode caller, ASTNode child, Variable v) {
+    if(caller == getFinallyOptNoTransform()) {
+      return isDAbefore(v);
     }
-
-    protected boolean typeError_computed = false;
-    protected TypeDecl typeError_value;
-    // Declared in UnreachableStatements.jrag at line 136
- @SuppressWarnings({"unchecked", "cast"})     public TypeDecl typeError() {
-        if(typeError_computed) {
-            return typeError_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        typeError_value = getParent().Define_TypeDecl_typeError(this, null);
-        if(isFinal && num == state().boundariesCrossed)
-            typeError_computed = true;
-        return typeError_value;
-    }
-
-    protected boolean typeRuntimeException_computed = false;
-    protected TypeDecl typeRuntimeException_value;
-    // Declared in UnreachableStatements.jrag at line 137
- @SuppressWarnings({"unchecked", "cast"})     public TypeDecl typeRuntimeException() {
-        if(typeRuntimeException_computed) {
-            return typeRuntimeException_value;
-        }
-        ASTNode$State state = state();
-        int num = state.boundariesCrossed;
-        boolean isFinal = this.is$Final();
-        typeRuntimeException_value = getParent().Define_TypeDecl_typeRuntimeException(this, null);
-        if(isFinal && num == state().boundariesCrossed)
-            typeRuntimeException_computed = true;
-        return typeRuntimeException_value;
-    }
-
-    // Declared in Statements.jrag at line 347
- @SuppressWarnings({"unchecked", "cast"})     public boolean enclosedByExceptionHandler() {
-        ASTNode$State state = state();
-        boolean enclosedByExceptionHandler_value = getParent().Define_boolean_enclosedByExceptionHandler(this, null);
-        return enclosedByExceptionHandler_value;
-    }
-
-    // Declared in Statements.jrag at line 463
- @SuppressWarnings({"unchecked", "cast"})     public TypeDecl typeThrowable() {
-        ASTNode$State state = state();
-        TypeDecl typeThrowable_value = getParent().Define_TypeDecl_typeThrowable(this, null);
-        return typeThrowable_value;
-    }
-
-    // Declared in DefiniteAssignment.jrag at line 668
-    public boolean Define_boolean_isDAbefore(ASTNode caller, ASTNode child, Variable v) {
-        if(caller == getFinallyOptNoTransform()) {
-            return isDAbefore(v);
-        }
-        if(caller == getCatchClauseListNoTransform()) {
+    if(caller == getCatchClauseListNoTransform()) {
       int childIndex = caller.getIndexOfChild(child);
-            return getBlock().isDAbefore(v);
-        }
-        if(caller == getBlockNoTransform()) {
-            return isDAbefore(v);
-        }
-        return getParent().Define_boolean_isDAbefore(this, caller, v);
+      return getBlock().isDAbefore(v);
     }
-
-    // Declared in DefiniteAssignment.jrag at line 1218
-    public boolean Define_boolean_isDUbefore(ASTNode caller, ASTNode child, Variable v) {
-        if(caller == getFinallyOptNoTransform()){
+    if(caller == getBlockNoTransform()) {
+      return isDAbefore(v);
+    }
+    return getParent().Define_boolean_isDAbefore(this, caller, v);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:1211
+   * @apilevel internal
+   */
+  public boolean Define_boolean_isDUbefore(ASTNode caller, ASTNode child, Variable v) {
+    if(caller == getFinallyOptNoTransform()){
     if(!getBlock().isDUeverywhere(v))
       return false;
     for(int i = 0; i < getNumCatchClause(); i++)
@@ -995,7 +1322,7 @@ if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = 
         return false;
     return true;
   }
-        if(caller == getCatchClauseListNoTransform()) { 
+    if(caller == getCatchClauseListNoTransform()) { 
    int childIndex = caller.getIndexOfChild(child);
 {
     if(!getBlock().isDUafter(v))
@@ -1005,15 +1332,17 @@ if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = 
     return true;
   }
 }
-        if(caller == getBlockNoTransform()) {
-            return isDUbefore(v);
-        }
-        return getParent().Define_boolean_isDUbefore(this, caller, v);
+    if(caller == getBlockNoTransform()) {
+      return isDUbefore(v);
     }
-
-    // Declared in ExceptionHandling.jrag at line 179
-    public boolean Define_boolean_handlesException(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
-        if(caller == getBlockNoTransform()){
+    return getParent().Define_boolean_isDUbefore(this, caller, v);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:188
+   * @apilevel internal
+   */
+  public boolean Define_boolean_handlesException(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
+    if(caller == getBlockNoTransform()){
     for(int i = 0; i < getNumCatchClause(); i++)
       if(getCatchClause(i).handles(exceptionType))
         return true;
@@ -1021,7 +1350,7 @@ if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = 
       return true;
     return handlesException(exceptionType);
   }
-        if(caller == getCatchClauseListNoTransform()) { 
+    if(caller == getCatchClauseListNoTransform()) { 
    int childIndex = caller.getIndexOfChild(child);
 {
     if(hasFinally() && !getFinally().canCompleteNormally())
@@ -1029,76 +1358,86 @@ if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = 
     return handlesException(exceptionType);
   }
 }
-        return getParent().Define_boolean_handlesException(this, caller, exceptionType);
+    return getParent().Define_boolean_handlesException(this, caller, exceptionType);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:121
+   * @apilevel internal
+   */
+  public boolean Define_boolean_reachable(ASTNode caller, ASTNode child) {
+    if(caller == getFinallyOptNoTransform()) {
+      return reachable();
     }
-
-    // Declared in UnreachableStatements.jrag at line 121
-    public boolean Define_boolean_reachable(ASTNode caller, ASTNode child) {
-        if(caller == getFinallyOptNoTransform()) {
-            return reachable();
-        }
-        if(caller == getBlockNoTransform()) {
-            return reachable();
-        }
-        return getParent().Define_boolean_reachable(this, caller);
+    if(caller == getBlockNoTransform()) {
+      return reachable();
     }
-
-    // Declared in UnreachableStatements.jrag at line 125
-    public boolean Define_boolean_reachableCatchClause(ASTNode caller, ASTNode child) {
-        if(caller == getCatchClauseListNoTransform()) { 
+    return getParent().Define_boolean_reachable(this, caller);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:128
+   * @apilevel internal
+   */
+  public boolean Define_boolean_reachableCatchClause(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
+    if(caller == getCatchClauseListNoTransform()) { 
    int childIndex = caller.getIndexOfChild(child);
 {
-    TypeDecl type = getCatchClause(childIndex).getParameter().type();
     for(int i = 0; i < childIndex; i++)
-      if(getCatchClause(i).handles(type))
+      if(getCatchClause(i).handles(exceptionType))
         return false;
-    if(reachableThrow(getCatchClause(childIndex)))
+    if(catchableException(exceptionType))
       return true;
-    if(type.mayCatch(typeError()) || type.mayCatch(typeRuntimeException()))
+    if(exceptionType.mayCatch(typeError()) || exceptionType.mayCatch(typeRuntimeException()))
       return true;
     return false;
   }
 }
-        return getParent().Define_boolean_reachableCatchClause(this, caller);
+    return getParent().Define_boolean_reachableCatchClause(this, caller, exceptionType);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:156
+   * @apilevel internal
+   */
+  public boolean Define_boolean_reportUnreachable(ASTNode caller, ASTNode child) {
+    if(caller == getFinallyOptNoTransform()) {
+      return reachable();
     }
-
-    // Declared in UnreachableStatements.jrag at line 154
-    public boolean Define_boolean_reportUnreachable(ASTNode caller, ASTNode child) {
-        if(caller == getFinallyOptNoTransform()) {
-            return reachable();
-        }
-        if(caller == getCatchClauseListNoTransform()) {
+    if(caller == getCatchClauseListNoTransform()) {
       int childIndex = caller.getIndexOfChild(child);
-            return reachable();
-        }
-        if(caller == getBlockNoTransform()) {
-            return reachable();
-        }
-        return getParent().Define_boolean_reportUnreachable(this, caller);
+      return reachable();
     }
-
-    // Declared in Statements.jrag at line 352
-    public boolean Define_boolean_enclosedByExceptionHandler(ASTNode caller, ASTNode child) {
-        if(caller == getBlockNoTransform()) {
-            return true;
-        }
-        return getParent().Define_boolean_enclosedByExceptionHandler(this, caller);
+    if(caller == getBlockNoTransform()) {
+      return reachable();
     }
-
-    // Declared in Statements.jrag at line 446
-    public ArrayList Define_ArrayList_exceptionRanges(ASTNode caller, ASTNode child) {
-        if(caller == getCatchClauseListNoTransform()) {
+    return getParent().Define_boolean_reportUnreachable(this, caller);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:353
+   * @apilevel internal
+   */
+  public boolean Define_boolean_enclosedByExceptionHandler(ASTNode caller, ASTNode child) {
+    if(caller == getBlockNoTransform()) {
+      return true;
+    }
+    return getParent().Define_boolean_enclosedByExceptionHandler(this, caller);
+  }
+  /**
+   * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:447
+   * @apilevel internal
+   */
+  public ArrayList Define_ArrayList_exceptionRanges(ASTNode caller, ASTNode child) {
+    if(caller == getCatchClauseListNoTransform()) {
       int childIndex = caller.getIndexOfChild(child);
-            return exceptionRanges();
-        }
-        if(caller == getBlockNoTransform()) {
-            return exceptionRanges();
-        }
-        return getParent().Define_ArrayList_exceptionRanges(this, caller);
+      return exceptionRanges();
     }
-
-public ASTNode rewriteTo() {
+    if(caller == getBlockNoTransform()) {
+      return exceptionRanges();
+    }
+    return getParent().Define_ArrayList_exceptionRanges(this, caller);
+  }
+  /**
+   * @apilevel internal
+   */
+  public ASTNode rewriteTo() {
     return super.rewriteTo();
-}
-
+  }
 }
